test/parse-fail/keyword__nil.he
fn main
{
    let b:nil;      //~ ERROR 2000
}
